--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -2,29 +2,39 @@
   margin-top: auto;
   text-align: center;
   margin-top: 15%;
-  color: blanchedalmond;
+  color: black;
   border: solid 5px #4A00E0;
-  background-color: black;
-  border-bottom-left-radius: 100px;
-  border-top-right-radius: 100px;
+  background-color: #fff;
+  border-radius: 5%;
   padding: 15px;
   box-shadow: 0 5px 30px -5px black;
   max-width: 25%;
   margin-left: 38%;
   margin-bottom: 25%;
-  min-height: 55%; }
+  min-height: 55%;
+  min-width: min-content; }
 
 .form_Control input {
   background-color: transparent;
   border: 5px #4A00E0 solid;
   display: block;
+  border-radius: 15px;
   width: 100%;
   padding: 15px 0;
   font-size: 20px;
-  color: blanchedalmond; }
+  color: black; }
 
 .profilepic {
-  border-radius: 100%; }
+  border-radius: 100%;
+  width: 40%;
+  border: 5px solid #4A00E0;
+  box-shadow: 0 5px 30px -5px black; }
 
 ul {
   list-style-type: none; }
+
+@media screen and (max-width: 600px) {
+  .he {
+    width: 300px; }
+  .profilepic {
+    size: 20%; } }
