--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -164,3 +164,18 @@ background-color: #6c5ce7;
     }
   }
 }
+@media screen and (max-width: 600px) {
+ .navbar{
+  
+   justify-content:stretch;
+   width: 100%;
+ }
+ .navbar_menu--links{
+  justify-content:stretch;
+ }
+
+
+  
+  
+}
+
