--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -6,7 +6,7 @@
 
 <% if (locals.user){ %>
 
-		<body style="background-image: url(images/bg.jpg);background-size: cover;
+		<body style="background-image: url(images/g.jpg);background-size: cover;
 		background-position: center;
 		background-attachment: fixed;">
 		
@@ -17,9 +17,17 @@
 		<div id="user-chat-box" style="box-shadow:0 5px 30px -5px black;">
 			
 				<ul id="chat-messages-list">
-					<h2 style="color: #6c5ce7;">
-						&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspChatroom !!!
+					<h2 style="color: white;border-radius: px;background-color: #6c5ce7;padding: 0.5%;border-radius: 5px;">
+
+
+						&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
+						<img src="https://img.icons8.com/external-justicon-lineal-color-justicon/32/000000/external-chat-notifications-justicon-lineal-color-justicon.png" style="height: 10%; " st/>
+                        <!-- <i class="far fa-eye "></i> -->
+                        Codeial 
+						<!-- <br>
+						&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspHii Codeial here !!! -->
 					</h2>
+                 
 					
 					<li class="other-message">
 						<!-- <span>
