--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -2,17 +2,15 @@
   color: black;
   position: fixed;
   overflow: hidden;
-  bottom: 270px;
+  bottom: 50px;
   left: 10px;
-  border: 4px solid #f96d00;
-  border-radius: 25px;
-  height: 400px;
+  border: 5px solid #4191b1;
+  border-radius: 2.5%;
+  height: 450px;
   width: 350px;
-  background: white;
-  box-shadow: 50x 5px 5px 5px black; }
+  background: white; }
   #user-chat-box #chat-messages-list {
     list-style: none;
-    padding: 10px;
     height: 70%;
     background-color: white;
     overflow: auto; }
@@ -22,9 +20,12 @@
       #user-chat-box #chat-messages-list .other-message span {
         display: inline-block;
         padding: 15px;
+        padding-right: 35px;
         color: black;
+        box-shadow: 3px 3px 3px 3px lightslategray;
         background-color: #58d258;
         border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
         border-bottom-right-radius: 15px; }
     #user-chat-box #chat-messages-list .self-message {
       text-align: right;
@@ -32,12 +33,16 @@
       #user-chat-box #chat-messages-list .self-message span {
         display: inline-block;
         padding: 15px;
+        padding-left: 35px;
         color: black;
-        background-color: #a0dcff;
+        background-color: #00bbf0;
+        margin-bottom: 1.2%;
+        border-top-left-radius: 15px;
         border-top-right-radius: 15px;
         border-bottom-left-radius: 15px; }
   #user-chat-box #chat-message-input-container {
     border-top: 4px solid #6c5ce7;
+    box-shadow: 0 5px 30px -5px black;
     padding-top: 15px;
     height: 24%;
     width: 100%;
@@ -46,10 +51,11 @@
     #user-chat-box #chat-message-input-container #chat-message-input {
       height: 50%;
       width: 100%;
-      padding-left: 5px;
+      padding-left: 25px;
       background-color: lightgray;
       border-radius: 10px;
-      color: black; }
+      color: black;
+      margin-left: 15px; }
     #user-chat-box #chat-message-input-container #send-message {
       height: 50%;
       width: 30%;
