--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -43,6 +43,43 @@
   display: flex;
   flex-direction: row; }
 
+.looder::after,
+.looder::before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 7px solid;
+  border-color: transparent transparent #ffc93c #64c4ed;
+  width: 148px;
+  height: 148px;
+  transform-origin: center center;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotationBack 1.5s linear infinite; }
+
+.looder::before {
+  width: 160px;
+  height: 160px;
+  border-color: white #6c5ce7 transparent transparent;
+  animation: rotation 2s linear infinite; }
+
+.looder {
+  width: 118px;
+  height: 118px;
+  margin: 2%;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  border: 7px solid;
+  border-color: transparent transparent;
+  box-sizing: border-box;
+  animation: rotation 5000.2s linear infinite; }
+
 .loader::after,
 .loader::before {
   content: '';
@@ -92,15 +129,14 @@
     transform: rotate(-360deg); } }
 
 .post-avatar {
-  background-color: black;
+  background-color: #ffcf7a;
   overflow: hidden;
   align-items: center;
   width: 35%;
   padding: 1%;
-  height: 50vmin;
-  border: solid 4px #f96d00;
-  border-top-right-radius: 100px;
-  border-bottom-left-radius: 100px;
+  height: 42vmin;
+  border-radius: 8%;
+  border: solid 6px  #1b789c;
   margin-bottom: 50px;
   margin-left: 30vh;
   margin-bottom: 20vh;
@@ -115,7 +151,7 @@
   padding-right: 1%;
   padding-bottom: 5%;
   border: 4px solid #00bbf0;
-  border-radius: 50px;
+  border-radius: 20px;
   margin-bottom: 50px; }
 
 .fa-heart:hover {
@@ -136,7 +172,7 @@ body {
   font-weight: bolder;
   height: 100vh;
   position: relative;
-  color: #81ecec;
+  color: #1b789c;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 .button {
@@ -243,17 +279,20 @@ body {
     margin-left: 15%; }
   #home-container #user-friends {
     width: 15%;
-    border: solid 4px #00bbf0;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
+    border: solid 6px #ffcf7a;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
     min-height: 50vh;
     position: relative;
+    min-width: max-content;
     margin-bottom: 0;
     color: #f96d00;
     padding-left: 5%;
     padding-right: 2.5%;
     text-decoration: none;
-    background-color: black; }
+    background-color: #4191b1; }
 
 input[type=file]::file-selector-button {
   border: 2px solid #6c5ce7;
@@ -271,3 +310,30 @@ input[type=file]::file-selector-button:hover {
   transition: 0.2s;
   background-color: #81ecec;
   border: 2px solid #00cec9; }
+
+.fas:hover {
+  color: #f95959; }
+
+@media screen and (max-width: 600px) {
+  body {
+    width: 100;
+    overflow: scroll; }
+  #home-container {
+    display: block;
+    height: auto; }
+  .post-avatar {
+    border-radius: 10px;
+    width: min-content;
+    height: min-content;
+    margin-left: 7%; }
+  .whole {
+    width: 80%;
+    margin-bottom: 10%;
+    align-content: center;
+    margin-left: 0%; }
+  #user-friends {
+    width: 80%;
+    align-content: center;
+    border-top-left-radius: 0%;
+    border-bottom-left-radius: 0%;
+    margin-left: 22%; } }
