--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -3,23 +3,24 @@
 	color: black;
     position: fixed;
 	overflow: hidden;
-    bottom: 270px;
+    bottom: 50px;
     left: 10px;
 	
-	border: 4px solid #f96d00;
+	border: 5px solid #4191b1;;
     // border: 6px solid black;
 	
-	border-radius: 25px;
-    height: 400px;
+	border-radius: 2.5%;
+    height: 450px;
 	width: 350px;
 	background: white;
 	// // padding: 5px;
-	// box-shadow: 1px 1px 1px 1px lightgrey;
-	box-shadow:50x 5px 5px 5px black;
+	
+
 
     #chat-messages-list{
+		
     	list-style: none;
-	    padding: 10px;
+	    // padding: 10px;
 	    height: 70%;
 	    background-color: white;
 	    overflow: auto;
@@ -30,12 +31,15 @@
 		    span{
 		    	display:inline-block;
 	    		padding: 15px;
+				padding-right: 35px;
                 color: black;
-			
+				box-shadow: 3px 3px 3px 3px lightslategray;
 		    	background-color: #58d258;
 
 				border-top-left-radius: 15px;
+				border-top-right-radius: 15px;
                 border-bottom-right-radius: 15px;
+
 		    }
 		    
 	    }
@@ -49,10 +53,13 @@
 		    	 
 	    		display:inline-block;
 	    		padding: 15px;
+				padding-left: 35px;
                 color: black;
-				
-    			background-color: #a0dcff;
-
+				// box-shadow: 3px 3px 3px 3px lightgray;
+				// box-shadow:0 5px 30px -5px black;
+    			background-color: #00bbf0;
+				margin-bottom: 1.2%;
+				border-top-left-radius: 15px;
 				border-top-right-radius: 15px;
                 border-bottom-left-radius: 15px;
 		    }
@@ -64,6 +71,9 @@
 		// background-color: lightgray;
 		
 		border-top: 4px solid #6c5ce7;
+		// box-shadow: 3px 3px 3px 3px lightslategray;
+		box-shadow:0 5px 30px -5px black;
+		
 		padding-top: 15px;
     	    height: 24%;
 		    width: 100%;
@@ -73,10 +83,12 @@
 		    #chat-message-input{
 	    	    height: 50%;
     			width: 100%;
-				padding-left: 5px;
+				padding-left: 25px;
 				background-color: lightgray;
+				
 				border-radius: 10px;
 				color: black;
+				margin-left: 15px;
 		    }
 
 		    #send-message{
@@ -131,4 +143,6 @@
 			0% {opacity:0;}
 			100% {opacity:1;}
 		  }
+		  
 }
+
