--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,14 +46,22 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script>
           $(document).ready(function(){
-            $("#1").click(function(){
+            $(".msg").click(function(){
             $("#user-chat-box").fadeToggle();
             
             });
           });
           </script>
-          
-          	<button id="1" style="margin: 2%;border-radius:25px;padding: 5px;background-color: #a29bfe;color: #000;font-size: larger;padding-left: 20px;padding-right: 20px;font-weight:bold;border: 2px solid #6c5ce7 ;">Chatroom</button><br><br>
+          <!-- <span class="looder"> -->
+           
+             <i class="msg fas fa-comment-dots fa-5x" style="margin: 2%;margin-left: 50px;"></i>
+
+          <!-- </span> -->
+         
+         
+          	<!-- <button id="1" style="margin: 2%;border-radius:25px;padding: 5px;background-color: #a29bfe;color: #000;font-size: larger;padding-left: 20px;padding-right: 20px;font-weight:bold;border: 2px solid #6c5ce7 ;">
+              
+              Chatroom</button><br><br> -->
         
 
 
@@ -95,15 +103,15 @@
 
 
 
-                <li id="post-<%= post._id %>">
+                <li style="color: #81ecec;;" id="post-<%= post._id %>">
                   <br><br><br>
                   <p>
                    
-                    <img  class="header-img"  src="<%=post.user.avatar%>" width="7%" height="7%" alt="">
+                    <img  class="header-img"  src="<%=post.user.avatar%>" width="10%" height="10%" alt="">
                     <br>
                     
                     
-                    <div class="pst" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid #00bbf0 ;padding: 15px;">
+                    <div class="pst" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid #00bbf0 ;padding: 15px;color: #81ecec;">
                       <%= post.user.name %> : <%= post.content %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     
                      <% if  ( locals.user && locals.user.id == post.user.id){ %>
@@ -200,9 +208,9 @@
                         <br>
                        
                         <br>
-                        <img  class="header-img"  src="<%=comment.user.avatar%>" width="7%" height="7%" alt="" style="display: inline-block;">
+                        <img  class="header-img"  src="<%=comment.user.avatar%>" width="10%" height="10%" alt="" style="display: inline-block;">
                         
-                        <div class="cmnt" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid lime ;padding: 15px;">
+                        <div class="cmnt" style="border-radius: 15px;align-items: center;display: inline-block;border: 4px solid lime ;padding: 15px;color: #81ecec;">
                           
                           <%= comment.user.name %> :
 
@@ -264,17 +272,18 @@
         <section id=user-friends>
           <br> <br>
           <img class="frnds-img" src="images/laugh.png" height="65px">
-          <h3 style="color:#00bbf0;">
+          <h3 style="color:#ffcf7a;">
             
          Friends</h3>
           <% for(u of all_users) {%>
             <br>
             <p>
-              
-              <i class="fas fa-user" style="color:palegoldenrod ;"></i>
+              <!-- <img  class="header-img"  src="<%=u.avatar%>" width="2.5%" height="2.5%" alt=""> -->
+              <i class="fas fa-user" style="color:#ffcf7a; ;"></i>
+
              
 
-              <a style="color:palegoldenrod ;text-decoration:none;"  href="/users/profile/<%= u.id %>"><%= u.name%></a>
+              <a style="color:#ffcf7a; ;text-decoration:none;"  href="/users/profile/<%= u.id %>"><%= u.name%></a>
             </p>
 
             <% } %>
