--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,7 +10,7 @@
    </p> -->
 
    <div class="profileclass">
-   <img class ="profilepic" src="<%=profile_user.avatar%>"  width="100">
+   <img class ="profilepic" src="<%=profile_user.avatar%>" >
    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     Name:<%= profile_user.name %>
    </p>
