--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -50,7 +50,7 @@
     &--left h1 {
       font-size: 4.2rem;
       // color: #1ee494;
-      color: white;
+      color: #6c5ce7;
       
      
       // color: $lime;
@@ -80,7 +80,7 @@
       font-size: 2rem;
       // color: #8E2DE2;
       // color: #1ee494;
-      color: white;
+      color: #6c5ce7;
       
       
       // color: $dark;
