--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -4,10 +4,11 @@
   overflow: hidden;
   bottom: 50px;
   left: 10px;
-  border: 5px solid #4191b1;
+  box-shadow: 0 2px 20px -3px black;
+  border: 4px solid black;
   border-radius: 2.5%;
-  height: 450px;
-  width: 350px;
+  height: 480px;
+  width: 370px;
   background: white; }
   #user-chat-box #chat-messages-list {
     list-style: none;
