--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -46,10 +46,7 @@
    
 // }
   // background: $light;
-  i{
-    color: black;
-    
-  }
+  
   // background: #8E2DE2;  /* fallback for old browsers */
   // background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
   // background: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -72,7 +69,7 @@
   // background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
   // background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: black;
-background-color: #6c5ce7;
+background-color: black;
   
 
 
