--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -5,13 +5,13 @@
 	overflow: hidden;
     bottom: 50px;
     left: 10px;
-	
-	border: 5px solid #4191b1;;
+	box-shadow:0 2px 20px -3px black;
+	border: 4px solid black;
     // border: 6px solid black;
 	
 	border-radius: 2.5%;
-    height: 450px;
-	width: 350px;
+    height: 480px;
+	width: 370px;
 	background: white;
 	// // padding: 5px;
 	
