--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -118,7 +118,7 @@ margin:2%;
   bottom: 0;
   margin: auto;
   border: 7px solid;
-  border-color: transparent transparent #05004e white;
+  border-color: transparent transparent black #6c5ce7;
   width: 68px;
   height: 68px;
   border-radius: 50%;
@@ -130,7 +130,7 @@ margin:2%;
 .loader::before {
   width: 58px;
   height: 58px;
-  border-color:white black transparent transparent;
+  border-color:#f96d00 #f96d00 transparent transparent;
   animation: rotation 1s linear infinite;
 }
 .loader {
@@ -140,7 +140,7 @@ margin:2%;
   display: inline-block;
   position: relative;
   border: 7px solid;
-  border-color: black white transparent transparent;
+  border-color: black black transparent transparent;
   box-sizing: border-box;
   animation: rotation 1.2s linear infinite;
 }
@@ -203,15 +203,17 @@ margin:2%;
   // background-color: #fecea8;
   // background-color: #222831;
   overflow:auto;
-  background-color:black;
+  background-color:white;
   margin-left: 20vh;
   // color: blanchedalmond;
   // color: #f96d00;
   width: 65%;
+  padding-top: 1%;
   padding-left: 1%;
   padding-right: 1%;
-  padding-bottom: 5%;
-  border: 4px solid #00bbf0;
+  padding-bottom: 2%;
+  box-shadow:0 2px 20px -3px black;
+  border: 6px solid #1b789c;
   // border: 5px solid #f96d00;
   border-radius: 20px;
   margin-bottom: 50px;
@@ -233,9 +235,13 @@ animation-delay: 0s;
 
 body{
 
-  background: #1A2980;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+
+
+
+  background: rgb(255,255,255);  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, rgba(255,255,255,1), rgba(0,212,255,1));  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   // background: linear-gradient(72.3deg, rgb(29, 7, 64) 8.5%, rgb(253, 105, 139) 92.2%);
 
@@ -291,7 +297,8 @@ background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, F
     border: 0;
     border-radius: 5px;
     display: inline;
-    box-shadow:0 5px 30px -5px rgba(0, 0, 0, 2);
+  
+    box-shadow:0 2px 20px -3px black;
   }
   
   .button:focus {
@@ -303,7 +310,8 @@ background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, F
       color: black;
       transition: 1ms;
       transition: ease-in;
-      box-shadow:0 5px 30px -5px rgba(0, 0, 0, 2);
+      
+      box-shadow:0 2px 20px -3px black;
   
   }
   .form-control {
@@ -315,7 +323,7 @@ background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, F
     padding-right: 2%;
     
     width: 100%;
-    color: blanchedalmond;
+    color: #1b789c;
     
   }
   .form_control input {
@@ -333,7 +341,7 @@ background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, F
     font-size: 20px;
     overflow:hidden;
   //   color: #fff;
-    color:blanchedalmond ;
+    color:#1b789c ;
   }
   .form_control input:focus,
 .form_control input:valid {
@@ -424,14 +432,15 @@ background: linear-gradient(to right, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, F
     //   border-left: 4px solid  #00bbf0;
     // border-top: 4px solid  #00bbf0;
     // border-bottom: 5px solid  #00bbf0;
-    border:solid 6px #ffcf7a;;
+
+    border:solid 6px  #1b789c;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     min-height:  50vh;
     position: relative;
-    min-width:max-content;
+    min-width:min-content;
     // padding-bottom: 10px;
     margin-bottom: 0;
     // color: blanchedalmond;
