--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -42,8 +42,8 @@
                                 <i class="fas fa-sign-out-alt fa-2x"></i>
                                 </a>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <a href="/users/profile/<%= u.id %>">
-                            <img  class="header-img"  src="<%=user.avatar%>" width="30" height="30" style="border:2px solid black;">
+                            <a href="/users/profile/<%= user._id %>">
+                            <img  class="header-img" alt="img" width="30" height="30"  src="<%=user.avatar%>" width="30" height="30" style="border:2px solid black;">
                         </a>
                             <br>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
