--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,16 +1,40 @@
 
     <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/chat_box.css">
     <!-- <link rel="stylesheet" href="/css/home.css"> -->
     <!-- <h1>Codeial /Profile page</h1> -->
-    <div class="wrap" style="height:100vh">
-    <div class="profile">
+
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $(".msg").click(function(){
+        $("#user-chat-box").fadeToggle();
+        
+        });
+      });
+      </script>
+      <!-- <span class="looder"> -->
+          
+         <i class="msg fas fa-comment-dots fa-5x" style="margin: 2%;margin-left: 50px;"></i>
+    <div class="wrap" style="height:100vh;" >
+    <div class="profile" >
+        
     <!-- <img src="<%=user.avatar%>" alt="<%= user.name %>" width="100">
    <p>
     <%= user.name %>
    </p> -->
 
+   
+
    <div class="profileclass">
-   <img class ="profilepic" src="<%=profile_user.avatar%>" >
+    <% if(profile_user.avatar) {%>
+        <img class ="header-img" src="<%=profile_user.avatar%>" width="120" height="120" style="border:2px solid black;box-shadow:0 2px 20px -3px black;">
+       
+       <% }else{%>
+         <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="120" height="120">
+         <%}%>
+   <!-- <img class ="profilepic" src="<%=profile_user.avatar%>" > -->
    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     Name:<%= profile_user.name %>
    </p>
@@ -42,8 +66,117 @@
                 <input class="button" type="submit" value="Update">
                 <br>
             </form>
+            <%- include('_chat_box') -%>
         
             <%}else{%>
+                		
+		
+		<div id="user-chat-box" style="box-shadow:0 2px 20px -3px black;">
+			
+            <ul id="chat-messages-list">
+                <h2 style="color: white;border-radius: px;background-color: #6c5ce7;padding: 0.5%;border-radius: 5px;">
+
+
+                    
+                
+                    <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/32/000000/external-chat-notifications-justicon-lineal-color-justicon.png" style="height: 10%; " st/>
+                    <!-- <i class="far fa-eye "></i> -->
+                    Codeial 
+                    <!-- <br>
+                    &nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspHii Codeial here !!! -->
+                </h2>
+                <br>
+                <div style="padding-left: 2%;">
+                    <% if(profile_user.avatar) {%>
+                         <img class ="header-img" src="<%=profile_user.avatar%>" width="60" height="60" style="border:2px solid black;box-shadow:0 2px 20px -3px black;">
+                        
+                        <% }else{%>
+                          <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="60" height="60">
+                          <%}%>
+                   
+                </div>
+               
+               
+                
+                
+                <p style="padding-left: 2%;">
+                    Say hii
+
+                </p>
+                <p style="padding-left: 2%;">
+                    to <%= profile_user.name %>
+                
+
+                </p>
+
+            
+                
+                <li class="other-message">
+                    <!-- <span>
+    
+                    </span> -->
+                    
+                </li>
+                <br>
+                <li class="self-message">
+                    <!-- <span>
+                        
+                    </span> -->
+                    
+                    
+                </li>
+    
+            </ul>
+            <div id="chat-message-input-container">
+                <input id="chat-message-input" placeholder="Type message here">
+                <button id="send-message">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
+    
+        </div>
+        
+    
+    </div>
+    <br>
+    <%var check%>
+    <% for (f of user.friendships){%>
+       
+        
+        <%if(f._id==profile_user.id){%>
+            <%check=true%>
+            <%}%>
+           
+        <%}%>
+        <%if(check){%>
+            <p  style='background-color:green; color: white;width: min-content;margin-left: 40%;'>Connected</p>
+
+            <div id='details'>
+
+            <a href="/users/removefriend/?id=<%=profile_user._id%>&type=<%=locals.user.id %>" style="text-decoration: none;"><button class='button'>UnFriend</button></a>
+        </div>
+            <%}else{%>
+    <a id='addfreind' class='add' href="/freind/add?id=<%=profile_user.id%>&name=<%=user.id%>">Add Freind</a>
+    <%}%>
+    
+    
+    
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 <!-- show only profile info -->
                 <br><br>
                 <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" >
@@ -54,4 +187,55 @@
                 <%} %>
             </div>
         </div>
+        
     </div>
+    <%if(locals.user.request){%>
+        <ul >
+        <% for (r of locals.user.request){%>
+          <li>
+      
+            <img class='img' src="<%=r.avatar%>" width="20" height="20"> <span class='title'><%=r.name%></span>
+            <br>
+           <a href='/freind/add?id=<%=r._id%>&name=<%=user.id%>'><button style=" height: 30px;
+            width:70px;
+            background-color: green;
+            color:white;
+            font-weight: bolder;
+            margin-left:3%;border: 2px solid green;">Accept</button></a> <a href="/users/removefriend/?id=<%=r._id%>&type=<%=locals.user.id %>"><button style=" display: inline-block;
+          margin-left:10%;
+          color:white;
+          background-color: red;
+          height:30px;
+          width:60px;
+          font-weight: bolder;
+          margin-top:2%;
+          border:2px solid red;
+         ">Reject</button></a>
+          </li>
+        <%}%>
+       </ul>
+       <%}%>
+    <div  style="background-color: white;max-width: 40%;min-width:40%;min-height:min-content;margin: auto;margin-bottom: 10%;border-radius: 10px;border: 4px solid black;box-shadow:0 2px 20px -3px black">
+        <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;color: black;background: #f96d00;border-radius: 5px;" >
+            About
+            
+        </h1>
+        <p style="padding: 1%;color: black;">Hi there</p>
+            <p style="padding: 1%;color: #64c4ed;">I have built a social media website using node js and mongo db and added google oauth to authenticate users.</p>
+            <p style="padding: 1%;color: #6d42c7;">You can Post images ,like images and comment too apart from this you also get email whenever some one comments on your post</p>
+            <p style="padding: 1%;color: #f07810;">You can chat with your friends using chatroom.</p>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+ 
+<script src="/js/chat_engine.js"></script>
+<% if (locals.user){ %>
+  <script>
+      new ChatEngine('user-chat-box', '<%= locals.user.name %>')
+  </script>
+  <% } %>
+
+   
+      
+        
+    
