--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -162,6 +162,10 @@ margin:2%;
     transform: rotate(-360deg);
   }
 }
+i:hover{
+  color: #41d8bf;
+
+}
     
 .post-avatar{
   // background-color: #f27370;
@@ -172,13 +176,13 @@ margin:2%;
   // background: linear-gradient(109.6deg, rgb(43, 1, 91) 13.4%, rgb(122, 2, 54) 100.2%);
   
   // background: linear-gradient(109.6deg, rgb(14, 11, 56) 11.2%, rgb(239, 37, 37) 91.1%);
-  background-color:#ffcf7a;;
+  background-color:#eaeaea;
   overflow: hidden;
   align-items: center;
   width: 35%;
   padding:1%;
   height: 42vmin;
-  border-radius: 8%;
+  border-radius: 4%;
   
   // padding-left: 10%;
   // padding-right: 10%;
@@ -306,7 +310,7 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
   }
   .button:hover{
      
-      background: #fecd51;
+      background: #f95959;
       color: black;
       transition: 1ms;
       transition: ease-in;
@@ -507,7 +511,7 @@ input[type=file]::file-selector-button:hover {
   border: 2px solid #00cec9;
 }
 .fas:hover{
-  color: #f95959;;
+  color: #f95959;
 
 
 }
@@ -550,5 +554,15 @@ input[type=file]::file-selector-button:hover {
 
   
   
+}
+i:hover{
+  color:#f95959;
+}
+.FRND a:hover{
+  color: white;
+}
+.FRND a{
+  color: black;
+  background-color:#f95959 ;
 }
 
