--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,12 +32,17 @@
         <img class ="header-img" src="<%=profile_user.avatar%>" width="120" height="120" style="border:2px solid black;box-shadow:0 2px 20px -3px black;">
        
        <% }else{%>
-         <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="120" height="120">
+         <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="120" height="120" style="border:2px solid black;box-shadow:0 2px 20px -3px black;">
          <%}%>
    <!-- <img class ="profilepic" src="<%=profile_user.avatar%>" > -->
    <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     Name:<%= profile_user.name %>
    </p>
+   <% if(isFriend){ %>
+               
+    <h3 style="background-color: mediumspringgreen;">connected</h3>
+<% } %>
+
    
 
 
@@ -91,7 +96,7 @@
                          <img class ="header-img" src="<%=profile_user.avatar%>" width="60" height="60" style="border:2px solid black;box-shadow:0 2px 20px -3px black;">
                         
                         <% }else{%>
-                          <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="60" height="60">
+                          <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/unknown-512.png" class='header-img' width="60" height="60" style="border:2px solid black;box-shadow:0 2px 20px -3px black;">
                           <%}%>
                    
                 </div>
@@ -108,6 +113,7 @@
                 
 
                 </p>
+               
 
             
                 
@@ -139,25 +145,30 @@
     
     </div>
     <br>
-    <%var check%>
-    <% for (f of user.friendships){%>
-       
+   
+    <% if(locals.user && locals.user.id != profile_user.id){ %>
+        <a href="/friends/toggle-friend/<%= profile_user._id %>" class="button" role="button" style="text-decoration: none;">
+            <% if(isFriend){ %>
+               
+                Unfriend 
+            <% }else{ %>
+
+                <!-- for checking pending request -->
+
+                <% if(ispending){ %>
+                   Request Pending
+              <%  }else{ %>
+
+                Add Friend   
+
+
+                <% } %>
+                
+             
+            <% } %>
+        </a>
         
-        <%if(f._id==profile_user.id){%>
-            <%check=true%>
-            <%}%>
-           
-        <%}%>
-        <%if(check){%>
-            <p  style='background-color:green; color: white;width: min-content;margin-left: 40%;'>Connected</p>
-
-            <div id='details'>
-
-            <a href="/users/removefriend/?id=<%=profile_user._id%>&type=<%=locals.user.id %>" style="text-decoration: none;"><button class='button'>UnFriend</button></a>
-        </div>
-            <%}else{%>
-    <a id='addfreind' class='add' href="/freind/add?id=<%=profile_user.id%>&name=<%=user.id%>">Add Freind</a>
-    <%}%>
+    <% } %>
     
     
     
@@ -189,41 +200,17 @@
         </div>
         
     </div>
-    <%if(locals.user.request){%>
-        <ul >
-        <% for (r of locals.user.request){%>
-          <li>
-      
-            <img class='img' src="<%=r.avatar%>" width="20" height="20"> <span class='title'><%=r.name%></span>
-            <br>
-           <a href='/freind/add?id=<%=r._id%>&name=<%=user.id%>'><button style=" height: 30px;
-            width:70px;
-            background-color: green;
-            color:white;
-            font-weight: bolder;
-            margin-left:3%;border: 2px solid green;">Accept</button></a> <a href="/users/removefriend/?id=<%=r._id%>&type=<%=locals.user.id %>"><button style=" display: inline-block;
-          margin-left:10%;
-          color:white;
-          background-color: red;
-          height:30px;
-          width:60px;
-          font-weight: bolder;
-          margin-top:2%;
-          border:2px solid red;
-         ">Reject</button></a>
-          </li>
-        <%}%>
-       </ul>
-       <%}%>
+    
     <div  style="background-color: white;max-width: 40%;min-width:40%;min-height:min-content;margin: auto;margin-bottom: 10%;border-radius: 10px;border: 4px solid black;box-shadow:0 2px 20px -3px black">
-        <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;color: black;background: #f96d00;border-radius: 5px;" >
+        <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;color: black;background: #f95959;border-radius: 5px;" >
             About
             
         </h1>
         <p style="padding: 1%;color: black;">Hi there</p>
-            <p style="padding: 1%;color: #64c4ed;">I have built a social media website using node js and mongo db and added google oauth to authenticate users.</p>
+            <p style="padding: 1%;color:cornflowerblue;">I have built a social media website using node js and mongo db and added google oauth to authenticate users.</p>
             <p style="padding: 1%;color: #6d42c7;">You can Post images ,like images and comment too apart from this you also get email whenever some one comments on your post</p>
-            <p style="padding: 1%;color: #f07810;">You can chat with your friends using chatroom.</p>
+            <p  style="padding: 1%;color: black;">You can add / remove friends as well</p>
+            <p style="padding: 1%;color: #f95959;">You can chat with your friends using chatroom.</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
