added search functionality

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,10 +1,10 @@
 footer {
   margin-top: 20px;
-  color: white;
+  color: #f95959;
   padding-top: 5px;
   text-align: center;
   width: 100%;
   height: 2.5rem;
   position: relative;
   bottom: 0;
-  background-color: #6c5ce7; }
+  background-color: black; }
