--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -3,7 +3,7 @@ footer{
 
   margin-top: 20px;
  
-    color: white;
+    color: #f95959;
     padding-top: 5px;
 
     
@@ -31,7 +31,7 @@ footer{
  
         position:relative;
         bottom: 0;
-    background-color: #6c5ce7;
+    background-color: black;
 
 
 
