--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -20,16 +20,24 @@
                     <!-- Codeial  -->
                    
 
-                    <h1>
+                    
                         <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+
+                        <!-- &nbsp<h1><%=title %></h1> -->
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h1 style="color:#f95959 ;"><%=title %></h1>&nbsp;&nbsp;&nbsp;
                         
-                        <%=title %></h1>
+                        
+                        
+                       
                     <div class="navbar_bars">
                         <!-- <h1><%=title %></h1> -->
                         <!-- <i class="fas fa-bars"></i> -->
                         <div class="navbar_menu" style="align-items:baseline;">
+
+
+                            
                            
                             <!-- <i class="fas fa-user" style="color:#00bbf0 ;"></i>
                             <a href="/users/profile/:profile_user.id" class="navbar_menu--links">Profile</a> -->
