--- a/views/friend_requests.ejs
+++ b/views/friend_requests.ejs
@@ -6,7 +6,7 @@
 <br><br><br>
 <% for(wannaBeFriend of friendRequests){ %>
    
-  <div style="padding: 2%;background-color: black;color: white;margin-left: 40%;width:20%;margin-top: 0%;border-bottom: 2px solid white;padding-left: 5%;padding-right: 0%;">
+  <div style="padding: 2%;background-color: black;color: #f95959;margin-left: 40%;width:20%;margin-top: 0%;border: 4px solid #f95959;padding-left: 5%;padding-right: 0%;">
 
     <% if(wannaBeFriend.user_id.avatar){ %>
         <img src="<%=wannaBeFriend.user_id.avatar %>" width="30%" height="30%" style="border-radius: 50%;border: 2px solid black;">
