--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -141,9 +141,9 @@ i:hover {
   border-radius: 4%;
   border: solid 6px  #1b789c;
   margin-bottom: 50px;
-  margin-left: 30vh;
+  margin-left: 70vh;
   margin-bottom: 20vh;
-  margin-top: 12vh; }
+  margin-top: 0.5%; }
 
 .whole {
   overflow: auto;
@@ -281,7 +281,7 @@ body {
   height: auto; }
   #home-container #feed-posts {
     width: 90%;
-    margin-left: 15%; }
+    margin-left: 0%; }
   #home-container #user-friends {
     width: 15%;
     border: solid 6px  #1b789c;
@@ -289,7 +289,7 @@ body {
     border-bottom-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    min-height: 50vh;
+    min-height: max-content;
     position: relative;
     min-width: min-content;
     margin-bottom: 0;
@@ -297,7 +297,8 @@ body {
     padding-left: 5%;
     padding-right: 2.5%;
     text-decoration: none;
-    background-color: #4191b1; }
+    background-color: #4191b1;
+    margin-top: 0%; }
 
 input[type=file]::file-selector-button {
   border: 2px solid #6c5ce7;
@@ -323,6 +324,8 @@ input[type=file]::file-selector-button:hover {
   body {
     width: 100;
     overflow: scroll; }
+  .boxContainer {
+    visibility: hidden; }
   #home-container {
     display: block;
     height: auto; }
