--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -72,7 +72,7 @@
 		
 		border-top: 4px solid #6c5ce7;
 		// box-shadow: 3px 3px 3px 3px lightslategray;
-		box-shadow:0 5px 30px -5px black;
+		// box-shadow:0 5px 30px -5px black;
 		
 		padding-top: 15px;
     	    height: 24%;
