--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -182,6 +182,7 @@ i:hover{
   width: 35%;
   padding:1%;
   height: 42vmin;
+  
   border-radius: 4%;
   
   // padding-left: 10%;
@@ -194,10 +195,10 @@ i:hover{
   // border-radius: 100%;
  
   margin-bottom: 50px;
-  margin-left: 30vh;
+  margin-left: 70vh;
   // box-shadow:0 5px 30px -5px rgba(0, 0, 0, 2);
   margin-bottom: 20vh;
-  margin-top: 12vh;
+  margin-top: 0.5%;
   
 }
 .whole{
@@ -303,6 +304,7 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
     display: inline;
   
     box-shadow:0 2px 20px -3px black;
+    
   }
   
   .button:focus {
@@ -422,7 +424,7 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
     width: 90%;
     // height: 100vh;
     // padding: 10px;
-    margin-left: 15%;
+    margin-left: 0%;
    
     // align-content:space-around;
    
@@ -442,7 +444,7 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
     border-bottom-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    min-height:  50vh;
+    min-height:max-content;
     position: relative;
     min-width:min-content;
     // padding-bottom: 10px;
@@ -457,6 +459,7 @@ background: linear-gradient( to right ,rgba(254,254,254,1) , rgba(0,212,255,1));
     text-decoration: none;
     // background-color: black;
     background-color: #4191b1;
+    margin-top: 0%;
 
     
 
@@ -519,6 +522,9 @@ input[type=file]::file-selector-button:hover {
   body{
     width: 100;
     overflow:scroll;
+  }
+  .boxContainer{
+    visibility: hidden;
   }
   #home-container{
     display: block;
