--- a/views/all_friends.ejs
+++ b/views/all_friends.ejs
@@ -12,7 +12,7 @@
             
 
 
-            <div style="padding: 2%;background-color: black;color: white;margin-left: 40%;width:20%;margin-top: 0%;border-bottom: 2px solid white;padding-left: 5%;padding-right: 0%;">
+            <div style="padding: 2%;background-color: black;color: white;margin-left: 40%;width:20%;margin-top: 0%;border: 2px solid #f95959;padding-left: 5%;padding-right: 0%;">
 <% if(user.avatar){ %>
     <img src="<%= user.avatar %>" width="20%" height="20%" style="border-radius: 50%;border: 2px solid black;">
 <% }else {%>
