--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
           
          <i class="msg fas fa-comment-dots fa-5x" style="margin: 2%;margin-left: 50px;"></i>
     <div class="wrap" style="height:100vh;" >
-    <div class="profile" >
+    <div class="profile" style="background-color: lightgrey;">
         
     <!-- <img src="<%=user.avatar%>" alt="<%= user.name %>" width="100">
    <p>
@@ -201,7 +201,7 @@
         
     </div>
     
-    <div  style="background-color: white;max-width: 40%;min-width:40%;min-height:min-content;margin: auto;margin-bottom: 10%;border-radius: 10px;border: 4px solid black;box-shadow:0 2px 20px -3px black">
+    <div  style="background-color: lightgrey;max-width: 40%;min-width:40%;min-height:min-content;margin: auto;margin-bottom: 10%;border-radius: 10px;border: 4px solid black;box-shadow:0 2px 20px -3px black">
         <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;color: black;background: #f95959;border-radius: 5px;" >
             About
             
